<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/voice_setting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/menu_voice_setting_text"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/voice_setting_button"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:text="Button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alert_setting_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/menu_alert_setting_text1"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/alert_setting1"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:inputType="number"
                    android:background="@color/white"
                    android:textColor="@color/black"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alert_setting_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/menu_alert_setting_text2"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/alert_setting2"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:inputType="number"
                    android:background="@color/white"
                    android:textColor="@color/black"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alert_setting_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/menu_alert_setting_text3"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/alert_setting3"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:inputType="number"
                    android:background="@color/white"
                    android:textColor="@color/black"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>